--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -47,7 +47,7 @@
     <c-corporate-footer></c-corporate-footer>
   
     <script>
-      var html_root = 'https://static.scania.com/build/global/3.1.0/component',
+      var html_root = 'https://static.scania.com/build/global/3.1.0/components',
       component = CorporateUi.getUrlParameter('c'),
       path = [html_root, component, component].join('/') + '.html';
 
