--- a/docs/component/component.html
+++ b/docs/component/component.html
@@ -9,7 +9,7 @@
 
     <title>Corporate UI - Developers</title>
 
-    <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
+    <script src="https://d31jnweo1ynb8u.cloudfront.net/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.1.0-CF/js/corporate-ui.js"></script>
     
