--- a/docs/component/scania-doc/hydrolysis/hydrolysis-analyzer.html
+++ b/docs/component/scania-doc/hydrolysis/hydrolysis-analyzer.html
@@ -8,7 +8,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="hydrolysis.html">
+<link rel="import" href="https://static.scania.com/vendors/components/pure-js/hydrolysis/1.25.0/hydrolysis.js"></script>">
 
 <script>
 (function() {
