--- a/docs/component/scania-doc/hydrolysis/hydrolysis.html
+++ b/docs/component/scania-doc/hydrolysis/hydrolysis.html
@@ -7,5 +7,5 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<!-- <script src="https://static.scania.com/vendors/components/pure-js/hydrolysis/1.25.0/hydrolysis.js"></script> -->
-<script src="https://static.scania.com/vendors/components/pure-js/hydrolysis/1.25.0/hydrolysis.js"></script>
+<!-- <script src="https://d31jnweo1ynb8u.cloudfront.net/vendors/components/pure-js/hydrolysis/1.25.0/hydrolysis.js"></script> -->
+<script src="https://d31jnweo1ynb8u.cloudfront.net/vendors/components/pure-js/hydrolysis/1.25.0/hydrolysis.js"></script>
