--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -14,13 +14,14 @@
 
     <style>
 
-        .header-is-sticky .is-dealer c-corporate-header .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick  {
             width: 41px !important;
             height: 37px !important;
         }
 
-        .header-is-sticky .is-dealer c-corporate-header .navbar-symbol.should-stick, c-corporate-header.header-is-sticky .navbar-symbol.should-stick {
-            background-image: transparent !important;
+        .header-is-sticky c-corporate-header .is-dealer .navbar-symbol.should-stick:before, c-corporate-header.header-is-sticky .navbar-symbol.should-stick:before {
+            background-image: url('https://d31jnweo1ynb8u.cloudfront.net/resources/logotype/scania/scania-symbol.svg') !important;
+          background-size: 40px !important;  
         }
 
         .container {
