--- a/docs/component/examples/dealer.html
+++ b/docs/component/examples/dealer.html
@@ -35,9 +35,8 @@
 
   <body class="scania" ng-controller="Example as example">
 
-    <c-corporate-header site-name="Developers" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
-      <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
-      <nav-item location="https://github.scania.com/scania/corporate-ui">Scania GitHub</nav-item>
+    <c-corporate-header site-name="{{example.siteName}}" site-url="/" ng-attr-dealer-name="{{example.dealerName}}" ng-attr-dealer-logo="{{example.dealerLogo}}" ng-attr-dealer-url="{{example.dealerUrl}}">
+      <nav-item location="https://scania.com/se/sv/home.html">Scania i Sverige</nav-item>
     </c-corporate-header>
 
     <c-main-content>
@@ -54,17 +53,22 @@
 
           <form class="app">
             <div class="form-group">
-              <label>Name</label>
-              <input type="text" class="form-control" placeholder="dealer-name" ng-model="example.dealerName">
-            </div>
-
-            <div class="form-group">
               <label>Logo</label>
               <input type="text" class="form-control" placeholder="dealer-logo" ng-model="example.dealerLogo">
             </div>
 
             <div class="form-group">
-              <label>URL</label>
+              <label>Dealer Name</label>
+              <input type="text" class="form-control" placeholder="dealer-name" ng-model="example.dealerName">
+            </div>            
+
+            <div class="form-group">
+              <label>Site Name</label>
+              <input type="text" class="form-control" placeholder="site-name" ng-model="example.siteName">
+            </div>   
+
+            <div class="form-group">
+              <label>Logotype Link</label>
               <input type="text" class="form-control" placeholder="dealer-url" ng-model="example.dealerUrl">
             </div>
           </form>
@@ -83,7 +87,8 @@
 
       function Example() {
         this.dealerName = 'Bilmetro';
-        this.dealerLogo = 'https://www.scania.com/content/dam/scanianoe/dealer-content-assets/sverige/bilmetro/bilmetro-logo.png';
+        this.siteName = 'Lorem Ipsum';        
+        this.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
         this.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
       }
     </script>
