--- a/docs/template/starter-kit/order-box.html
+++ b/docs/template/starter-kit/order-box.html
@@ -12,7 +12,7 @@
 
   <!-- corporate-ui.js includes Bootstrap, handling for old browsers, corporate header, main menu and footer as well as Web Components polyfills, if needed -->
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>   
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js?monitoring=true"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
