--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -1,82 +1,3 @@
-/* Special for Corporate UI Docs */
-
-.bs-docs-section h1[id],
-.bs-docs-section h2[id], 
-.bs-docs-section h3[id] {
-    padding-top: 110px !important; 
-    margin-top: -110px !important;
-}
-
-.highlight pre  {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-} 
-
-.highlight pre  {
-    white-space: nowrap;
-}   
-
-.highlight pre code {
-    white-space: pre;
-    display: block;
-    margin-bottom: 10px;
-}
-
-.highlight pre::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 7px;
-    height: 6px;
-    background-color:transparent;
-}
-
-.highlight pre::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0,0,0,.5);
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
-    cursor: pointer;
-}
-
-.bs-docs-sidebar.affix {
-    position: fixed;
-    top: 210px;
-    margin-left: 30px;
-    z-index: 910;
-}
-
- .header-is-sticky .bs-docs-sidebar.affix {
-    top: 100px;
-}
-
-.bs-docs-sidebar .nav > li > a:hover, .bs-docs-sidebar .nav > li > a:focus {
-    padding-left: 13px;
-    color: #041e42;
-    border-left: 2px solid #d6001c;
-}
-
-.bs-docs-sidebar .nav > li > a {
-    font-size: 14px;
-    font-weight: normal;
-    color: #999;
-    padding: 4px 15px;
-    text-transform: inherit;
-    font-family: 'Scania Sans Semi Condensed';
-} 
-
-
-.bs-docs-sidebar .checkbox {
-    padding: 0px 15px;
-} 
-
-.back-to-top {
-    margin-top: 8px;
-    margin-bottom: 8px;    
-    margin-left: 0;
-}  
-
-
-
-/* Special for Corporate UI Docs */
 
 .bs-docs-booticon {
   display: block;
@@ -1254,3 +1175,85 @@ body,
   .bs-docs-sidebar {
     display: none
   }
+
+
+
+/* Special for Corporate UI Docs */
+
+.bs-docs-section h1[id],
+.bs-docs-section h2[id], 
+.bs-docs-section h3[id] {
+    padding-top: 110px !important; 
+    margin-top: -110px !important;
+}
+
+.highlight pre  {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+} 
+
+.highlight pre  {
+    white-space: nowrap;
+}   
+
+.highlight pre code {
+    white-space: pre;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.highlight pre::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+    height: 6px;
+    background-color:transparent;
+}
+
+.highlight pre::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+    cursor: pointer;
+}
+
+.bs-docs-sidebar.affix {
+    position: fixed;
+    top: 210px;
+    margin-left: 30px;
+    z-index: 910;
+}
+
+ .header-is-sticky .bs-docs-sidebar.affix {
+    top: 100px;
+}
+
+.bs-docs-sidebar .nav > li > a:hover, .bs-docs-sidebar .nav > li > a:focus {
+    padding-left: 13px;
+    color: #041e42;
+    border-left: 2px solid #d6001c;
+}
+
+.bs-docs-sidebar .nav > li > a {
+    font-size: 14px;
+    font-weight: normal;
+    color: #999;
+    padding: 4px 15px;
+    text-transform: inherit;
+    font-family: 'Scania Sans Semi Condensed';
+} 
+
+
+.bs-docs-sidebar .checkbox {
+    padding: 0px 15px;
+} 
+
+.back-to-top {
+    margin-top: 8px;
+    margin-bottom: 8px;    
+    margin-left: 0;
+}  
+
+
+
+/*  End Special for Corporate UI Docs */
