--- a/docs/developer/used-vehicles.css
+++ b/docs/developer/used-vehicles.css
@@ -434,6 +434,9 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
     padding: 0 15px;
 }
 
+
+
+
 .filterset-heading {
     padding: 11px 0 10px;
 }
@@ -460,9 +463,16 @@ a.trigger.collapsed i.fa-angle-up {
 a.trigger i {
     transition: 0.3s transform;
 }
+
+.noUi-connect {
+    background: #033a6a;
+    left: 2px;
+    min-height: 7px;
+    top: -2px;
+}
     
 .nouislider-container {
-    padding: 15px 0 45px;
+    padding: 55px 0 20px;
     width: 30%;
     margin-left: 10px;
 }
@@ -476,14 +486,14 @@ a.trigger i {
 }
 
 .noUi-horizontal .noUi-tooltip {
-    bottom: -120%;
+
 }
 
 .noUi-tooltip {
     border: none;
-    background: #fff;
-    color: #000;
-    padding: 5px 5px 0px 5px;
+    background: #033a6a;
+    color: #fff;
+    padding: 7px;
     font-size: 12px;
     font-family: 'Scania Sans Condensed';
 }
@@ -497,22 +507,50 @@ a.trigger i {
     height: 4px;
 }
 
-.noUi-target {
-    background: silver;
-    border-radius: 4px;
+
+
+.noUi-connects {
+
+}
+
+.noUi-base {
+    background: transparent;
+    border-radius: 0px;
     border: none;
     box-shadow: none;
+    height: 3px;
 }
+
+.noUi-target {
+    background: #b0b3b1;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+    max-height: 1px;
+}
+
+.noUi-connects {
+    width: 100%;
+    height: 4px;
+    position: relative;
+    top: -1px;
+    left: 2px;
+} 
+
+.noUi-connect, .noUi-origin {
+    top: -1px;
+}    
   
 .noUi-horizontal .noUi-handle {
-    width: 10px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     left: -10px;
     top: -9px;
-    border: 1px solid #033a6a;
-    background: #FFF;
+    border: none;
+    background: #033a6a;
     cursor: w-resize;
     box-shadow: none;
+    border-radius: 50%;
 }    
 
 html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
@@ -527,10 +565,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 }
 
 
-.noUi-connect {
-    background: #033a6a;
-    left: 2px;
-} 
+
 
 
 
