--- a/docs/developer/css/scania-bootstrap-docs.css
+++ b/docs/developer/css/scania-bootstrap-docs.css
@@ -437,7 +437,7 @@
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
   border-width: 1px 0;
-  padding: 45px 0 15px;
+  padding: 45px 15px 15px;
 }
 .bs-example:after {
   content: "Example";
