--- a/docs/component/examples/bootstrap.html
+++ b/docs/component/examples/bootstrap.html
@@ -1810,22 +1810,22 @@
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <a href="#" class="thumbnail">
-                <img data-src="holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
               </a>
             </div>
             <div class="col-sm-6 col-md-3">
               <a href="#" class="thumbnail">
-                <img data-src="holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
               </a>
             </div>
             <div class="col-sm-6 col-md-3">
               <a href="#" class="thumbnail">
-                <img data-src="holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
               </a>
             </div>
             <div class="col-sm-6 col-md-3">
               <a href="#" class="thumbnail">
-                <img data-src="holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/100%x180" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
               </a>
             </div>
           </div>
@@ -1846,7 +1846,7 @@
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
                 <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -1856,7 +1856,7 @@
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
                 <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -1866,7 +1866,7 @@
             </div>
             <div class="col-sm-6 col-md-3">
               <div class="thumbnail">
-                <img data-src="holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
+                <img data-src="/corporate-ui-docs/js/holder.js/300x200" alt="Generic placeholder thumbnail" src="data:image/png;base64,">
                 <div class="caption">
                   <h3>Thumbnail label</h3>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -2163,7 +2163,7 @@
         <div class="bs-example">
           <div class="media">
             <a class="pull-left" href="#">
-              <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+              <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
             </a>
             <div class="media-body">
               <h4 class="media-heading">Media heading</h4>
@@ -2172,14 +2172,14 @@
           </div>
           <div class="media">
             <a class="pull-left" href="#">
-              <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+              <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
             </a>
             <div class="media-body">
               <h4 class="media-heading">Media heading</h4>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
               <div class="media">
                 <a class="pull-left" href="#">
-                  <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                  <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
                 </a>
                 <div class="media-body">
                   <h4 class="media-heading">Media heading</h4>
@@ -2206,7 +2206,7 @@
           <ul class="media-list">
             <li class="media">
               <a class="pull-left" href="#">
-                <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Media heading</h4>
@@ -2214,7 +2214,7 @@
                 <!-- Nested media object -->
                 <div class="media">
                   <a class="pull-left" href="#">
-                    <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                    <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
                   </a>
                   <div class="media-body">
                     <h4 class="media-heading">Nested media heading</h4>
@@ -2222,7 +2222,7 @@
                     <!-- Nested media object -->
                     <div class="media">
                       <a class="pull-left" href="#">
-                        <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                        <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
                       </a>
                       <div class="media-body">
                         <h4 class="media-heading">Nested media heading</h4>
@@ -2234,7 +2234,7 @@
                 <!-- Nested media object -->
                 <div class="media">
                   <a class="pull-left" href="#">
-                    <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                    <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
                   </a>
                   <div class="media-body">
                     <h4 class="media-heading">Nested media heading</h4>
@@ -2245,7 +2245,7 @@
             </li>
             <li class="media">
               <a class="pull-right" href="#">
-                <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
+                <img class="media-object" data-src="/corporate-ui-docs/js/holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
               </a>
               <div class="media-body">
                 <h4 class="media-heading">Media heading</h4>
