--- a/corporate-ui/components/components-iframe/docs-example-main-navigation.html
+++ b/corporate-ui/components/components-iframe/docs-example-main-navigation.html
@@ -39,7 +39,14 @@
         <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
             </sub-navigation>
           </nav-item>
-          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>          
+          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps
+          <sub-navigation caption="Mobile Apps">
+            <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
+          </sub-navigation>
+        </nav-item>          
       </primary-items>
       <secondary-items></secondary-items>
     </c-main-navigation>
