--- a/corporate-ui/components/extended-docs/extended-forms.html
+++ b/corporate-ui/components/extended-docs/extended-forms.html
@@ -136,7 +136,14 @@
             <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps
+          <sub-navigation caption="Mobile Apps">
+            <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
+            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
+          </sub-navigation>
+        </nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
           <sub-navigation caption="Style Guide">
             <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
